[package]
name = "command_history"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Psychloor"]
description = "A library for managing command history in Rust applications."
repository = "https://github.com/Psychloor/command_history"
keywords = ["command", "history", "concurrency", "thread-safety", "multi-threading"]
categories = ["concurrency", "multi-threading", "library", "command", "history"]

[dependencies]
parking_lot = "0.12.3"

[dev-dependencies]
rand = "0.8.4"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2
